[package]
name = "rustyengine"
version = "0.1.0"
edition = "2021"
authors = ["Benjamín García Roqués"]

[dependencies]
miniquad = "0.3.13"
glam = { version = "0.21.3", features = ["scalar-math"] }
image = "0.24.3"
log = "0.4"
gilrs = "0.9.0"
egui-miniquad = "0.12.0"
egui = "0.19.0"
flexi_logger = "0.23"